Discovered overarching issue: If a node doesn't point to any node, it will simply take the class of whatever nodes point to it. Can fix with the bidirection arrows, but arrows would have to be invisible. Look for other fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
    fill: #ff0000;
  }
 
- .noType{
+ .or, .noType{
    /*fill: #bd2031;*/
    fill: #ccc;
  }
@@ -35,7 +35,7 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  text {
    /*fill: #eeefff;*/
      fill: #000;
-     font: 10px sans-serif;
+     font: 8px sans-serif;
      pointer-events: none;
      text-anchor: middle;
  }
